[package]
name = "zstd-dictionary-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
hdrhistogram = "7.5.2"
zstd = { version = "0.12.3", features = ["zdict_builder"] }
